--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/server/index.js",
     "webpack": "webpack --config webpack.config.js",
-    "webpack-server": "npm run webpack && ln -s ../src/client/index.html dist; webpack-dev-server --content-base dist/ --devtool source-map --colors --port 3000"
+    "webpack-server": "npm run webpack && ln -s ../src/client/index.html dist; webpack-dev-server --content-base dist/ --devtool source-map --colors --port 3000",
+    "test": "karma start"
   },
   "dependencies": {
     "d3": "^3.5.16",
@@ -20,6 +21,15 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
+    "expect": "^1.14.0",
+    "karma": "^0.13.21",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-cli": "^0.1.2",
+    "karma-mocha": "^0.2.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.4.5",
+    "react-addons-test-utils": "^0.14.7",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
