--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "d3": "^3.5.16",
     "express": "^4.13.4",
     "react": "^0.14.7",
+    "react-autocomplete": "^0.2.0",
     "react-dom": "^0.14.7"
   },
   "devDependencies": {
